deploy/eks/argocd/base/tinder-app/reaction-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reaction-service-app
  namespace: tinder-space
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reaction-service-app
  template:
    metadata:
      labels:
        app: reaction-service-app
    spec:
      containers:
        - name: reaction-service-app
          image: reaction-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8083
