deploy/eks/argocd/base/tinder-app/reaction-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reaction-service
  namespace: tinder-space
spec:
  type: ClusterIP
  selector:
    app: reaction-service-app
  ports:
    - name: http
      protocol: TCP
      port: 8083
      targetPort: 8083
