deploy/eks/argocd/base/tinder-app/reaction-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reactions-ingress
  namespace: tinder-space
spec:
  ingressClassName: kong
  rules:
    - host: $(DOMAIN_NAME)
      http:
        paths:
          - path: /api/reactions
            pathType: Prefix
            backend:
              service:
                name: reaction-service
                port:
                  number: 8083
